name:                hImgDup
author:              Anja Berens
maintainer:          pharaun666@gmail.com
copyright:           (c) Anja Berens
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
category:            System
synopsis:            Library for finding duplicate files employing various methods of hashing.
homepage:            https://github.com/pharaun/hImgDup
-- description:
extra-source-files:  README.rst

source-repository head
    type:     git
    location: https://github.com/pharaun/hImgDup.git
    branch:   master

executable hImgDup
    main-is:             Main.hs
    default-language:    Haskell2010
    ghc-options:        -Wall -fno-warn-missing-signatures -rtsopts
    hs-source-dirs:      src
    build-depends:       base >=4.5 && <4.9
                       , unix
                       , posix-paths
                       , bytestring
                       , text
                       , utf8-string
                       , containers
                       , cereal
                       , conduit
                       , crypto-conduit
                       , cryptohash
                       , cryptohash-cryptoapi
                       , transformers
                       , system-filepath
                       , system-fileio
                       , filepath
                       , directory
                       , criterion
                       , base16-bytestring
                       , conduit-combinators
                       , conduit-extra
                       -- Drag in the pipes ecosystem (since that's what i am used to/like)
                       , dirstream
                       , directory-tree
                       , pipes-files
                       , pipes
                       , pipes-safe
--                       , optparse-applicative
